--- a/numbers/pom.xml
+++ b/numbers/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Numbers</name>
-	<description>Application for continuous calculation of average</description>
+	<name>numbers</name>
+	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
